--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<title>HTML Assignment 3</title>
+	<h1 align="center">HTML Assignment #3</h1>
+	<table id="table-1" class="middle">
+		<tr>
+			<td id="t11"></td>
+			<td id="t12"></td>
+			<td id="t13"></td>
+		</tr>
 
+
+			
 </body>
 
 </html>
